feat: adjusts in all sections and organize the nexts features

--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
                     </div>
                 </div>
             </div>
-            <div class="disponiveltowork">
-                <span class="disponivel"></span>
-                <p>Disponível</p>
-            </div>
+            <nav>
+                <ul>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+                <div class="disponiveltowork">
+                    <span class="disponivel"></span>
+                    <p>Disponível</p>
+                </div>
+            </nav>
+            
             <div class="menuhamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -102,8 +111,8 @@
                 <h1>Tenha um site profissional.</h1>
                 <p>Auxilio empresas a desenvolverem produtos digitais modernos e de alta qualidade. Design, Desenvolvimento Front-end e habilidade profissional para destacar seu produto no mercado.</p>
                 <div class="divmain">
-                    <a class="seeprojetos" href="#projetos">Ver trabalhos</a>
-                    <a href="#contato">Contato ↗</a>
+                    <a class="seeprojetos" href="#contato">Fale comigo</a>
+                    <a href="#contato">Ver trabalhos ↓</a>
                 </div>
                 <img class="textcircle" src="/assets/textcircle.png" alt="Texto circulando">
             </div>
@@ -112,51 +121,41 @@
 
     <section id="sobre">
         <h1 class="titlesobre">Sobre mim</h1>
-        <div class="introducingmyself">
-            <img src="./assets/me2.jpg" alt="">
-            <p>Olá, me chamo Henrique, tenho 21 anos e sou graduando de Análise e Desenvolvimento de Sistemas. Comecei a estudar e tive uma conexão direta com o desenvolvimento Front-end, desde então realizo alguns projetos e diariamente busco me aperfeiçoar cada vez mais, aprendendo e entendendo que o estudo constante é a chave pro sucesso.</p>
-        </div>
-        <div class="infosaboutme">
-            <div>
-                <h2>Infos Pessoais</h2>
-                <h3>Nome:</h3>
-                <p>Henrique Pinheiro Xavier</p>
-                <h3>Cargo:</h3>
-                <p>Freelancer & Desenvolvedor Front-end</p>
-                <h3>Formação:</h3>
-                <p>Graduando em Análise e Desenvolvimento de Sistemas</p>
-                <h3>Idioma:</h3>
-                <p>Português, Inglês e Espanhol</p>
-                <h3>Email:</h3>
-                <a href="#" target="_blank">henriquepinheiroxavier@gmail.com</a>
-                <h3>Github:</h3>
-                <a href="#" target="_blank">Henriquepx</a>
+        <div class="containersobretexts">
+
+            <div class="textsobreleft">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat atque temporibus vel, non veniam voluptatum vero at esse dicta natus id ullam, minus in odit.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam dolorem deleniti ipsum blanditiis nostrum atque maxime reiciendis debitis maiores, accusantium, eum at repellat, laborum placeat. Ullam distinctio corporis iusto reiciendis?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti deserunt iure tempore assumenda asperiores.</p>
+                <a href="#">Saiba mais sobre ⮕</a>
             </div>
-            <div>
-                <h2>Habilidades</h2>
-                <p>HTML, CSS: Fundamentos para construção de interfaces web.</p>
-                <p>Bootstrap, Tailwind: Frameworks para desenvolvimento ágil e designs consistentes.</p>
-                <p>Sass, Styled-Components: Ferramentas para estilização avançada e modularização.</p>
-                <p>JavaScript, TypeScript: Linguagens para interatividade e desenvolvimento robusto.</p>
-                <p>ReactJS: Framework eficiente para criação de interfaces de usuário.</p>
-                <p>Banco de Dados (SQL): Conhecimento sólido em gerenciamento de dados.</p>
+            <div class="textsobreright">
+                <div class="textright1">
+                    <h2><i class="fa-solid fa-code"></i></i>Habilidades</h2>
+                    <p>HTML, CSS: Fundamentos para construção de interfaces web.</p>
+                    <p>Bootstrap, Tailwind: Frameworks para desenvolvimento ágil e designs consistentes.</p>
+                    <p>Sass, Styled-Components: Ferramentas para estilização avançada e modularização.</p>
+                    <p>JavaScript, TypeScript: Linguagens para interatividade e desenvolvimento robusto.</p>
+                    <p>ReactJS: Framework eficiente para criação de interfaces de usuário.</p>
+                    <p>Banco de Dados (SQL): Conhecimento sólido em gerenciamento de dados.</p>
+                </div>
+                <div>
+                    <h2><i class="fa-solid fa-terminal"></i>Diferencial</h2>
+                    <p>Design Responsivo: Interfaces adaptáveis para desktops, tablets e smartphones.</p>
+                    <p>Paixão por UX/UI: Compromisso com interfaces intuitivas e visualmente atraentes.</p>
+                    <p>Colaboração Efetiva: Trabalho colaborativo para projetos alinhados e entregues no prazo.</p>
+                    <p>Tecnologias Modernas: Atualizado com ReactJS, TypeScript e Styled-Components.</p>
+                    <p>Foco em Performance: Otimização para carregamento rápido e eficiência.</p>
+                    </ul>
+                </div>
             </div>
-            <div>
-                <h2>Diferencial</h2>
-                <p>Design Responsivo: Interfaces adaptáveis para desktops, tablets e smartphones.</p>
-                <p>Paixão por UX/UI: Compromisso com interfaces intuitivas e visualmente atraentes.</p>
-                <p>Colaboração Efetiva: Trabalho colaborativo para projetos alinhados e entregues no prazo.</p>
-                <p>Tecnologias Modernas: Atualizado com ReactJS, TypeScript e Styled-Components.</p>
-                <p>Foco em Performance: Otimização para carregamento rápido e eficiência.</p>
-                </ul>
-            </div>
-            
+
         </div>
     </section>
 
     <section id="projetos">
             <div class="textproject">
-                <h1 class="titlepageproject">Projetos</h1>
+                <h1 class="titlesobre">Projetos</h1>
                 <div class="row">
                         <div class="project1 card">
                           <div class="wrapper">
@@ -170,6 +169,19 @@
                             </div>
                           </div>
                         </div>
+
+                        <div class="project2 card">
+                            <div class="wrapper">
+                              <div class="data">
+                                <div class="content">
+                                  <span class="author">Desenvolvimento Web</span>
+                                  <h1 class="title"><a class="titleproject" href="#">Portfólio v1</a></h1>
+                                  <p class="text">The antsy bingers of Netflix will eagerly anticipate the digital release of the Survive soundtrack, out today.</p>
+                                  <a href="#" class="linkto">Ver projeto</a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
 
                         <div class="project2 card">
                             <div class="wrapper">
@@ -200,68 +212,9 @@
             </div>
     </section>
 
-    <section id="skills">
-            <div class="textskill">
-                <h1>[Habilidades]</h1>
-                <div class="containerskills">
-                    <div class="containercontentlanguage">
-                        <p class="contentlanguage ativo">O React é uma biblioteca front-end JavaScript de código aberto com foco em criar interfaces de usuário em páginas web</p>
-                        <p class="contentlanguage">TypeScript é uma linguagem de programação de código aberto desenvolvida pela Microsoft. É um superconjunto sintático estrito de JavaScript e adiciona tipagem estática opcional à linguagem.</p>
-                        <p class="contentlanguage">JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. Juntamente com HTML e CSS, o JavaScript é uma das três principais tecnologias da World Wide Web.</p>
-                        <p class="contentlanguage">Styled Components é uma biblioteca feita para React e React Native. Ela utiliza uma mistura de CSS e Javascript usando uma técnica chamada CSS-in-JS.</p>
-                        <p class="contentlanguage">Sass é uma linguagem de folhas de estilo concebida inicialmente por Hampton Catlin e desenvolvida por Natalie Weizenbaum. Depois de suas versões iniciais, Weizenbaum e Chris Eppstein continuaram a estender Sass com SassScript, uma simples linguagem de script usada em arquivos Sass.</p>
-                        <p class="contentlanguage">Tailwind CSS é uma estrutura CSS de código aberto. A principal característica desta biblioteca é que, ao contrário de outros frameworks CSS como o Bootstrap, ela não fornece uma série de classes predefinidas para elementos como botões ou tabelas.</p>
-                        <p class="contentlanguage">Angular é uma plataforma de aplicações web de código-fonte aberto e front-end baseado em TypeScript liderado pela Equipe Angular do Google e por uma comunidade de indivíduos e corporações. Angular é uma reescrita completa do AngularJS, feito pela mesma equipe que o construiu.</p>
-                        <p class="contentlanguage">É uma linguagem de domínio específico desenvolvida para gerenciar dados relacionais em um sistema de gerenciamento de banco de dados, ou para processamento de fluxo de dados em um sistema de gerenciamento de fluxo de dados.</p>
-                        <p class="contentlanguage">Bootstrap é um framework web com código-fonte aberto para desenvolvimento de componentes de interface e front-end para sites e aplicações web, usando HTML, CSS e JavaScript, baseado em modelos de design para a tipografia, melhorando a experiência do usuário em um site amigável e responsivo.</p>
-                        <p class="contentlanguage">Cascading Style Sheets é um mecanismo para adicionar estilos a uma página web, aplicado diretamente nas tags HTML ou ficar contido dentro das tags. Também é possível, adicionar estilos adicionando um link para um arquivo CSS que contém os estilos.</p>
-                        <p class="contentlanguage">HTML é uma linguagem de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores. A tecnologia é fruto da junção entre os padrões HyTime e SGML. HyTime é um padrão para a representação estruturada de hipermídia e conteúdo baseado em tempo</p>
-                    </div>
-                    <div class="imagelanguages">
-                        <div class="menulanguage ativo">
-                            <img src="./assets/skills/react.png" alt="Angular">
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/typescript.png" alt="Typescript">
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/javascript.png" alt="JavaScript">
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/styledcomponents.png" alt="Styled Components">
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/sass.png" alt="Sass">    
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/tailwind.png" alt="Tailwind">    
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/angular.png" alt="Angular">    
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/sql.png" alt="SQL">    
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/bootstrap.png" alt="Bootstrap">    
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/css.png" alt="CSS">    
-                        </div>
-                        <div class="menulanguage">
-                            <img src="./assets/skills/html.png" alt="HTML">    
-                        </div>
-                    </div>
-                </div>
-            </div>    
-    </section>
-
     <section id="contato">
             <div class="contactsize">
-                <div class="sobrecontato">
-                    <h1>[Contato]</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime pariatur recusandae enim accusantium. Ipsa fugiat doloribus quod vero? Ut incidunt doloribus ex quod molestiae neque quam natus odio dolor aliquid!</p>
-                </div>
+                <h1 class="titlesobre">Sobre mim</h1>
                 <div class="container-form">
                     <form class="form-style" id="form">
                         <div class="name-email">
