--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
             </div>
         </div>
     </div>
+
+    <div class="overlay"></div>
         
     <main>
         <div class="mainsize">
