feat: create all structure to page content

--- a/index.html
+++ b/index.html
@@ -15,8 +15,72 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700;800;900&family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
-   
-    
+   <div class="content">
+        <main>
+            <div class="description">
+                <div class="title">
+                    <!-- <span>&lt;h1 class="title"&gt;</span> -->
+                    <h1>Henrique</h1>
+                    <!-- <span>&lt;h1 /&gt;</span> -->
+                </div>
+                <div class="textsdescription">
+                    <!-- <span>&lt;p class="description"&gt;</span> -->
+                    <p>Desenvolvedor Front-end.</p>
+                    <!-- <span>&lt;p /&gt;</span> -->
+                </div>
+            </div>
+
+            <div class="links">
+                <nav>
+                    <ul>
+                        <!-- <span>&lt;div class="links"&gt;</span> -->
+                        <li class="indexcontent">Sobre</li>
+                        <li class="indexcontent">Skills</li>
+                        <li class="indexcontent">Projetos</li>
+                        <li class="indexcontent">Contato</li>
+                        <li class="indexcontent">Blog</li>
+                        <li class="indexcontent">FAQ</li>
+                        <!-- <span>&lt;div /&gt;</span> -->
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="midias">
+                <!-- <span>&lt;div class="midias"&gt;</span> -->
+                <a href="" class="underline">
+                    <span>LinkedIn</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
+                </a>
+                <a href="" class="underline">
+                    <span>Github</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
+                </a>
+                <!-- <span>&lt;div /&gt;</span> -->
+            </div>
+
+        </main>
+
+        <div class="contentpages">
+            <section class="page active home">
+                <h1>Info</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa voluptas nulla aspernatur optio facere expedita esse voluptatum molestiae, quos est consequatur doloribus officia exercitationem dolorem nam, eius dolore ad eos nemo voluptate reiciendis dolor eum assumenda. Voluptas esse voluptate quisquam reiciendis nostrum quibusdam possimus beatae nulla pariatur itaque, magni magnam quod quae.</p>
+            </section>
+            <section class="page">
+                <h1>Skills</h1>
+            </section>
+            <section class="page">
+                <h1>Projetos</h1>
+            </section>
+            <section class="page">
+                <h1>Contatos</h1>
+            </section>
+            <section class="page">
+                <h1>Blog</h1>
+            </section>
+            <section class="page">
+                <h1>FAQ</h1>
+            </section>
+        </div>
+   </div>
+
     <script src="./main.js"></script>
 </body>
 </html>
