feat: hover the name of project appers a img following the cursor

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Henrique —— Front-end Developer</title>
+    <title>Henrique Pinheiro</title>
     <link rel="icon" href="./assets/icon.png">
     <!--CSS -->
     <link rel="stylesheet" href="./styles/styles.css">
@@ -38,7 +38,6 @@
                         <li class="indexcontent">Skills</li>
                         <li class="indexcontent">Projetos</li>
                         <li class="indexcontent">Contato</li>
-                        <li class="indexcontent">Blog</li>
                         <li class="indexcontent">FAQ</li>
                         <!-- <span>&lt;div /&gt;</span> -->
                     </ul>
@@ -47,6 +46,9 @@
 
             <div class="midias">
                 <!-- <span>&lt;div class="midias"&gt;</span> -->
+                <a href="" class="underline">
+                    <span>Blog</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
+                </a>
                 <a href="" class="underline">
                     <span>LinkedIn</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
                 </a>
@@ -63,19 +65,30 @@
                 <h1>Info</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa voluptas nulla aspernatur optio facere expedita esse voluptatum molestiae, quos est consequatur doloribus officia exercitationem dolorem nam, eius dolore ad eos nemo voluptate reiciendis dolor eum assumenda. Voluptas esse voluptate quisquam reiciendis nostrum quibusdam possimus beatae nulla pariatur itaque, magni magnam quod quae.</p>
             </section>
-            <section class="page">
+            <section class="page skills">
                 <h1>Skills</h1>
             </section>
-            <section class="page">
-                <h1>Projetos</h1>
+            <section class="page project">
+                
+                <div class="containerproject">
+                    <h1>Projetos</h1>
+                    <a href="#">DSM Consultoria
+                        <img class="hoverimage" src="./assets/dsm.png">
+                    </a>
+
+                    <a href="#">Japapou?
+                        <img class="hoverimage" src="./assets/japascreen.jpg">
+                    </a>
+                    <a href="#">Rexpeita - Ecommerce
+                        <img class="hoverimage" src="./assets/rxscreen.jpg">
+                    </a>
+                </div>
+               
             </section>
-            <section class="page">
+            <section class="page contact">
                 <h1>Contatos</h1>
             </section>
-            <section class="page">
-                <h1>Blog</h1>
-            </section>
-            <section class="page">
+            <section class="page faq">
                 <h1>FAQ</h1>
             </section>
         </div>
