--- a/index.html
+++ b/index.html
@@ -17,39 +17,32 @@
 <body>
    <div class="content">
         <div id="preloader">
-            <div class="loader"></div>
+            <span class="loader"></span>
         </div>
 
         <main>
             <div class="description">
                 <div class="title">
-                    <!-- <span>&lt;h1 class="title"&gt;</span> -->
                     <h1>Henrique</h1>
-                    <!-- <span>&lt;h1 /&gt;</span> -->
                 </div>
                 <div class="textsdescription">
-                    <!-- <span>&lt;p class="description"&gt;</span> -->
                     <p>Desenvolvedor Front-end.</p>
-                    <!-- <span>&lt;p /&gt;</span> -->
                 </div>
             </div>
 
             <div class="links">
                 <nav>
                     <ul>
-                        <!-- <span>&lt;div class="links"&gt;</span> -->
                         <li class="indexcontent">Sobre</li>
                         <li class="indexcontent">Skills</li>
                         <li class="indexcontent">Projetos</li>
                         <li class="indexcontent">Contato</li>
                         <li class="indexcontent">FAQ</li>
-                        <!-- <span>&lt;div /&gt;</span> -->
                     </ul>
                 </nav>
             </div>
 
             <div class="midias">
-                <!-- <span>&lt;div class="midias"&gt;</span> -->
                 <a href="" class="underline">
                     <span>Blog</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
                 </a>
@@ -59,14 +52,13 @@
                 <a href="" class="underline">
                     <span>Github</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
                 </a>
-                <!-- <span>&lt;div /&gt;</span> -->
             </div>
 
         </main>
 
         <div class="contentpages">
             <section class="page active home">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa voluptas nulla aspernatur optio facere expedita esse voluptatum molestiae, quos est consequatur doloribus officia exercitationem dolorem nam, eius dolore ad eos nemo voluptate reiciendis dolor eum assumenda. Voluptas esse voluptate quisquam reiciendis nostrum quibusdam possimus beatae nulla pariatur itaque, magni magnam quod quae.</p>
+                <p>Graduando em Análise e Desenvolvimento de Sistemas. Apaixonado por explorar as possibilidades infinitas que a tecnologia oferece. A cada dia, me dedico a aprimorar minhas habilidades por meio do aprendizado contínuo, reconhecendo que a dedicação inabalável ao conhecimento é fundamental para alcançar o sucesso.</p>
             </section>
             <section class="page skills">
 
