feat: add styles to link navegation

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
             <span class="loader"></span>
         </div>
 
-        <main>
+        <main class="mainelements">
             <div class="description">
                 <div class="title">
                     <h1>Henrique</h1>
                 </div>
                 <div class="textsdescription">
                     <p>Desenvolvedor Front-end.</p>
+                    <p>Eu crio interfaces interativas e envolventes, proporcionando experiências digitais perfeitas e acessíveis.</p>
                 </div>
             </div>
 
@@ -43,20 +44,20 @@
             </div>
 
             <div class="midias">
-                <a href="" class="underline">
+                <a href="https://dev-insights-self.vercel.app/" target="_blank" class="underline">
                     <span>Blog</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
                 </a>
-                <a href="" class="underline">
+                <a href="https://www.linkedin.com/in/henriquepinheiroxavier/" target="_blank" class="underline">
                     <span>LinkedIn</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
                 </a>
-                <a href="" class="underline">
+                <a href="https://github.com/henriquepx" target="_blank" class="underline">
                     <span>Github</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
                 </a>
             </div>
 
         </main>
 
-        <div class="contentpages">
+        <div class="contentpages mainelements">
             <section class="page active home">
                 <p>Graduando em Análise e Desenvolvimento de Sistemas. Apaixonado por explorar as possibilidades infinitas que a tecnologia oferece. A cada dia, me dedico a aprimorar minhas habilidades por meio do aprendizado contínuo, reconhecendo que a dedicação inabalável ao conhecimento é fundamental para alcançar o sucesso.</p>
             </section>
