--- a/index.html
+++ b/index.html
@@ -23,18 +23,17 @@
         <main class="mainelements">
             <div class="description">
                 <div class="title">
-                    <h1>Henrique</h1>
+                    <h1>Henrique Pinheiro</h1>
                 </div>
                 <div class="textsdescription">
-                    <p>Desenvolvedor Front-end.</p>
-                    <p>Eu crio interfaces interativas e envolventes, proporcionando experiências digitais perfeitas e acessíveis.</p>
+                    <h2>Desenvolvedor Front-end.</h2>
                 </div>
             </div>
 
             <div class="links">
                 <nav>
                     <ul>
-                        <li class="indexcontent">Sobre</li>
+                        <li class="indexcontent">Home</li>
                         <li class="indexcontent">Skills</li>
                         <li class="indexcontent">Projetos</li>
                         <li class="indexcontent">Contato</li>
@@ -42,23 +41,11 @@
                     </ul>
                 </nav>
             </div>
-
-            <div class="midias">
-                <a href="https://dev-insights-self.vercel.app/" target="_blank" class="underline">
-                    <span>Blog</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
-                </a>
-                <a href="https://www.linkedin.com/in/henriquepinheiroxavier/" target="_blank" class="underline">
-                    <span>LinkedIn</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
-                </a>
-                <a href="https://github.com/henriquepx" target="_blank" class="underline">
-                    <span>Github</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
-                </a>
-            </div>
-
         </main>
 
         <div class="contentpages mainelements">
             <section class="page active home">
+                <p>Eu crio interfaces interativas e envolventes, proporcionando experiências digitais perfeitas e acessíveis.</p>
                 <p>Graduando em Análise e Desenvolvimento de Sistemas. Apaixonado por explorar as possibilidades infinitas que a tecnologia oferece. A cada dia, me dedico a aprimorar minhas habilidades por meio do aprendizado contínuo, reconhecendo que a dedicação inabalável ao conhecimento é fundamental para alcançar o sucesso.</p>
             </section>
             <section class="page skills">
@@ -103,11 +90,22 @@
                             <img class="hoverimage" src="./assets/rxscreen.jpg">
                         </a>
                     </div>
-                    
                 </div>
                
             </section>
             <section class="page contact">
+                <div class="midias">
+                    <a href="https://dev-insights-self.vercel.app/" target="_blank" class="underline">
+                        <span>Blog</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
+                    </a>
+                    <a href="https://www.linkedin.com/in/henriquepinheiroxavier/" target="_blank" class="underline">
+                        <span>LinkedIn</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
+                    </a>
+                    <a href="https://github.com/henriquepx" target="_blank" class="underline">
+                        <span>Github</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
+                    </a>
+                </div>
+
             </section>
             <section class="page faq">
             </section>
