feat: add particejs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <span class="loader"></span>
         </div>
 
+
         <main class="mainelements">
             <div class="description">
                 <div class="title">
@@ -90,6 +91,7 @@
                             <img class="hoverimage" src="./assets/rxscreen.jpg">
                         </a>
                     </div>
+
                 </div>
                
             </section>
@@ -110,8 +112,11 @@
             <section class="page faq">
             </section>
         </div>
+
+        <div id="particles-container"></div>
    </div>
 
+   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
