refactor: adding reactjS to project and initial new project

--- a/index.html
+++ b/index.html
@@ -1,122 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Henrique Pinheiro</title>
-    <link rel="icon" href="./assets/icon.png">
-    <!--CSS -->
-    <link rel="stylesheet" href="./styles/styles.css">
-    <!--FONT AWESOME-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--FONT GOOGLE-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700;800;900&family=Righteous&display=swap" rel="stylesheet">
-</head>
-<body>
-   <div class="content">
-        <div id="preloader">
-            <span class="loader"></span>
-        </div>
-
-
-        <main class="mainelements">
-            <div class="description">
-                <div class="title">
-                    <h1>Henrique Pinheiro</h1>
-                </div>
-                <div class="textsdescription">
-                    <h2>Desenvolvedor Front-end.</h2>
-                </div>
-            </div>
-
-            <div class="links">
-                <nav>
-                    <ul>
-                        <li class="indexcontent">Home</li>
-                        <li class="indexcontent">Skills</li>
-                        <li class="indexcontent">Projetos</li>
-                        <li class="indexcontent">Contato</li>
-                        <li class="indexcontent">FAQ</li>
-                    </ul>
-                </nav>
-            </div>
-        </main>
-
-        <div class="contentpages mainelements">
-            <section class="page active home">
-                <p>Eu crio interfaces interativas e envolventes, proporcionando experiências digitais perfeitas e acessíveis.</p>
-                <p>Graduando em Análise e Desenvolvimento de Sistemas. Apaixonado por explorar as possibilidades infinitas que a tecnologia oferece. A cada dia, me dedico a aprimorar minhas habilidades por meio do aprendizado contínuo, reconhecendo que a dedicação inabalável ao conhecimento é fundamental para alcançar o sucesso.</p>
-            </section>
-            <section class="page skills">
-
-            </section>
-            <section class="page project">
-                
-                <div class="containerproject">
-                    <div class="projecttexts">
-                        <p>06/23 - [Web Development]</p>
-                        <a href="#" target="_blank">My Portfólio
-                            <img class="hoverimage" src="./assets/portfolio.png">
-                        </a>
-                    </div>
-                    <div class="projecttexts">
-                        <p>10/23 - [Web Development]</p>
-                        <a href="#" target="_blank">Photographer Portfólio
-                            <img class="hoverimage" src="./assets/photographer.png">
-                        </a>
-                    </div>
-                    <div class="projecttexts">
-                        <p>03/24 - [Web Development]</p>
-                        <a href="#" target="_blank">DevInsights
-                            <img class="hoverimage" src="./assets/devinsights.png">
-                        </a>
-                    </div>
-                    <div class="projecttexts">
-                        <p>11/23 - [Web Development]</p>
-                        <a href="#" target="_blank">DSM Consultoria
-                            <img class="hoverimage" src="./assets/dsm.png">
-                        </a>
-                    </div>
-                    <div class="projecttexts">
-                        <p>10/23 - [Web Development]</p>
-                        <a href="#" target="_blank">Japapou?
-                            <img class="hoverimage" src="./assets/japascreen.jpg">
-                        </a>
-                    </div>
-                    <div class="projecttexts">
-                        <p>10/21 - [Web Development]</p>
-                        <a href="#" target="_blank">Rexpeita - Ecommerce
-                            <img class="hoverimage" src="./assets/rxscreen.jpg">
-                        </a>
-                    </div>
-
-                </div>
-               
-            </section>
-            <section class="page contact">
-                <div class="midias">
-                    <a href="https://dev-insights-self.vercel.app/" target="_blank" class="underline">
-                        <span>Blog</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
-                    </a>
-                    <a href="https://www.linkedin.com/in/henriquepinheiroxavier/" target="_blank" class="underline">
-                        <span>LinkedIn</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
-                    </a>
-                    <a href="https://github.com/henriquepx" target="_blank" class="underline">
-                        <span>Github</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
-                    </a>
-                </div>
-
-            </section>
-            <section class="page faq">
-            </section>
-        </div>
-
-        <div id="particles-container"></div>
-   </div>
-
-   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script src="./main.js"></script>
-</body>
+    <link rel="icon" href="/logo.jpeg">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
