--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Henrique Pinheiro</title>
-    <link rel="icon" href="/logo.jpeg">
+    <link rel="icon" href="/photo.jpg">
   </head>
   <body>
     <div id="root"></div>
