feat(refactor): add styled-components in project and create the projecard archive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Henrique Pinheiro</title>
     <link rel="icon" href="/photo.jpg">
+
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        box-sizing: border-box;
+        font-size: 100%;
+        font: inherit;
+        scroll-behavior: smooth;
+        vertical-align: baseline;
+        list-style: none;
+        text-decoration: none;
+        font-family: Segoe WPC, Segoe UI, sans-serif;
+      }
+
+      body {
+        background-color: #2e2e2e;
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
